Customized pax-web for Jakarta EE 10.